# GGMR

./: .gitignore  README.md  _smoke.py  algebra_backbone.pt  algebra_backbone_from_policy.pt  algebra_policy_head.pt  algebra_value_head.pt  conftest.py  main.py  policy_iter_00.pt  policy_iter_00_30dim.pt  pyproject.toml  railway.toml  value_iter_00.pt  value_iter_00_30dim.pt  verify_setup.py
checkpoints/full/: best.pt  history.json
checkpoints/round2/: best.pt  history.json
checkpoints/smoke/: best.pt  history.json
ggmr/: PHASE1A_PREREG.md  PHASE1A_README.md  PHASE1B_PREREG.md  PHASE1B_README.md  __init__.py  soundness.py  state.py  targets.py
ggmr/expr/: __init__.py  serialize.py  tree.py  walk.py
ggmr/heuristics/: __init__.py  composite.py  learned.py  trig_hand.py
ggmr/problems/: __init__.py  coverage_report.json  loader.py  (+25 more)
phase0/: PHASE0_FINDINGS.md  PHASE0_PREREG.md  README.md  requirements.txt
scripts/: _build_motif_candidates.py  _build_motif_candidates_v2.py  _extract_motif_timeouts.py  _gen_trig_eval_entries.py  _generate_one_hard.py  _generate_one_round2.py  _generate_one_training.py  _validate_one_subproc.py  analyze_productive_middle.py  astar_middle_5.py  extract_policy_warmstart_data.py  generate_hard_eval_set.py  generate_hard_eval_set_v2.py  generate_round2.py  generate_training_data.py  inspect_problem.py  merge_eval.py  migrate_24_to_30.py  migrate_monolith_to_split.py  parse_eval_log.py  run_exit.py  run_transfer_experiment.py  test_external.py  test_timeouts.py  validate_coverage.py  validate_hard_set.py  verify_round2_rule_coverage.py
(+112 files in other folders)
